2003-07-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebServicesConfigurationSectionHandler.cs: support remove/clear for
	<protocols>. Fixed IsSupported.

2003-07-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebServicesConfigurationSectionHandler.cs: singleton.

2003-07-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebServicesConfigurationSectionHandler.cs: New file that handles
	system.web/webServices section.

2002-07-21 Tim Coleman  <tim@timcoleman.com>
	* ChangeLog:
	* XmlFormatExtensionAttribute.cs:
	* XmlFormatExtensionPointAttribute.cs:
	* XmlFormatExtensionPrefixAttribute.cs:
		New files added